backend/k8s/originals/maildev_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maildev
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maildev
  template:
    metadata:
      labels:
        app: maildev
        tier: backend
    spec:
      containers:
      - name: maildev
        image: maildev/maildev:latest
        args: ["-s", "1025", "-w", "1080"]
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: maildev
spec:
  ports:
    - name: smtp
      protocol: TCP
      port: 1025
      targetPort: 1025
    - name: http
      protocol: TCP
      port: 1080
      targetPort: 1080
  selector:
    app: maildev
    tier: backend
  # type: LoadBalancer
