backend/k8s/originals/nginx_service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    tier: backend
    app: nginx
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: nginx
    tier: backend
  type: LoadBalancer
