backend/k8s/originals/shifl_admin_service.yml
apiVersion: v1
kind: Service
metadata:
  name: shifl-admin
  labels:
    tier: backend
spec:
  selector:
    app: shifl-admin
    tier: backend
  ports:
  - protocol: TCP
    port: 9000
